--- a/just.html
+++ b/just.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    hi i am keresa and i am seting here and see and editing things
+   
+</head>
+<body>
+     hi i am keresa and i am seting here and see and editing things
 </body>
 
 </html>
