--- a/index.html
+++ b/index.html
@@ -818,7 +818,11 @@
         <h2 class="animate-fade">About Our Channel</h2>
         <div class="about-content">
             <div class="about-text animate-slide-left">
-                <p>Our mission is to share the uplifting song 'Fill Us with Your Love' in every language, spreading God's message of love, unity, and hope across the globe.</p>
+                <p>Our mission is to share the uplifting song 'Fill Us with Your Love' in 60+ languages, spreading God's message of love, unity, and hope across the globe.
+
+Founded by a passionate community of translators and musicians, we translate and produce music that resonates with diverse cultures, fostering spiritual connection through song.
+
+Join us in this exciting journey to touch hearts and inspire faith worldwide.</p>
                 <p>Founded by a passionate community of believers and musicians, we translate and produce music that resonates with diverse cultures, fostering spiritual connection through song.</p>
                 <p>Join us in this divine journey to touch hearts and inspire faith worldwide.</p>
                 <div class="impact-stats">
@@ -1105,6 +1109,7 @@
 </body>
 
 </html>
+
 
 
 
