--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="hero-content">
-            <h1 class="animate-slide-left">Worship Media</h1>
+            <h1 class="animate-slide-left">Worshipper Media</h1>
             <p class="animate-slide-right">Spreading God's Message of Love Through Song in Every Language Worldwide</p>
             <button class="cta-button animate-pulse" onclick="subscribe()" aria-label="Subscribe to YouTube channel">Subscribe on YouTube</button>
         </div>
@@ -1106,6 +1106,7 @@
 </body>
 
 </html>
+
 
 
 
