--- a/index.html
+++ b/index.html
@@ -780,12 +780,11 @@
         <div class="nav-links">
             <a href="#about" aria-label="About Section">About</a>
             <a href="#featured" aria-label="Featured Translations">Featured</a>
-            <a href="#languages" aria-label="Language Directory">Languages</a>
             <a href="#community" aria-label="Community Section">Community</a>
         </div>
 
         <button class="donate-button" 
-                    onclick="window.open('https://www.buymeacoffee.com/yourname','_blank')" 
+                    onclick="window.open('https://www.paypal.com/paypalme/worshippermedia','_blank')" 
                     aria-label="Donate Now">
                 ❤️ Donate
         </button>
@@ -796,7 +795,6 @@
         <i class="nav-toggle fas fa-times" style="position: absolute; top: 20px; right: 20px;" aria-label="Close Mobile Menu"></i>
         <a href="#about">About</a>
         <a href="#featured">Featured</a>
-        <a href="#languages">Languages</a>
         <a href="#community">Community</a>
     </div>
 
@@ -882,31 +880,6 @@
         </div>
     </section>
 
-    <!-- Language Directory Section -->
-    <section id="languages">
-        <h2 class="animate-fade">Explore Languages</h2>
-        <div class="language-search animate-fade">
-            <input type="text" placeholder="Search Languages" oninput="searchLanguages(this.value)" aria-label="Search languages">
-        </div>
-        <div class="language-list">
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('english')" onkeypress="if(event.key === 'Enter') goToPlaylist('english')">English</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('spanish')" onkeypress="if(event.key === 'Enter') goToPlaylist('spanish')">Spanish</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('hindi')" onkeypress="if(event.key === 'Enter') goToPlaylist('hindi')">Hindi</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('french')" onkeypress="if(event.key === 'Enter') goToPlaylist('french')">French</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('mandarin')" onkeypress="if(event.key === 'Enter') goToPlaylist('mandarin')">Mandarin</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('arabic')" onkeypress="if(event.key === 'Enter') goToPlaylist('arabic')">Arabic</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('german')" onkeypress="if(event.key === 'Enter') goToPlaylist('german')">German</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('portuguese')" onkeypress="if(event.key === 'Enter') goToPlaylist('portuguese')">Portuguese</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('russian')" onkeypress="if(event.key === 'Enter') goToPlaylist('russian')">Russian</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('japanese')" onkeypress="if(event.key === 'Enter') goToPlaylist('japanese')">Japanese</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('korean')" onkeypress="if(event.key === 'Enter') goToPlaylist('korean')">Korean</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('italian')" onkeypress="if(event.key === 'Enter') goToPlaylist('italian')">Italian</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('swahili')" onkeypress="if(event.key === 'Enter') goToPlaylist('swahili')">Swahili</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('bengali')" onkeypress="if(event.key === 'Enter') goToPlaylist('bengali')">Bengali</div>
-            <div class="language-item animate-zoom" role="button" tabindex="0" onclick="goToPlaylist('tamil')" onkeypress="if(event.key === 'Enter') goToPlaylist('tamil')">Tamil</div>
-        </div>
-    </section>
-
     <!-- Community Section -->
     <section id="community">
         <h2 class="animate-fade">Community & Engagement</h2>
@@ -952,7 +925,7 @@
             <a href="#contact" aria-label="Contact Us">Contact Us</a>
         </div>
         <button class="cta-button animate-pulse" 
-        onclick="window.open('https:www.buymeacoffee.com/@jeremy', '_blank')" 
+        onclick="window.open('https://www.paypal.com/paypalme/worshippermedia', '_blank')" 
         aria-label="Donate to support our mission">
         Donate to Support
         </button>
@@ -1106,7 +1079,6 @@
 </body>
 
 </html>
-
 
 
 
