--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
         </video>
         <div class="hero-content">
             <h1 class="animate-slide-left">Worshipper Media</h1>
-            <p class="animate-slide-right">Spreading God's Message of Love Through Song in Every Language Worldwide</p>
+            <p class="animate-slide-right">Spreading God's Message of Love Worldwide Through Song</p>
             <button class="cta-button animate-pulse" onclick="subscribe()" aria-label="Subscribe to YouTube channel">Subscribe on YouTube</button>
         </div>
     </header>
@@ -1079,6 +1079,7 @@
 </body>
 
 </html>
+
 
 
 
