--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="hero-content">
-            <h1 class="animate-slide-left">Worshipper Media</h1>
+            <h1 class="animate-slide-left">Worshiper Media</h1>
             <p class="animate-slide-right">Spreading God's Message of Love Worldwide Through Song</p>
             <button class="cta-button animate-pulse" onclick="subscribe()" aria-label="Subscribe to YouTube channel">Subscribe on YouTube</button>
         </div>
@@ -1079,6 +1079,7 @@
 </body>
 
 </html>
+
 
 
 
