--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
         </video>
         <div class="hero-content">
             <h1 class="animate-slide-left">Worshipper Media</h1>
-            <p class="animate-slide-right">Spreading God's Message of Love Through Song and Crist-Centered Literature</p>
+            <p class="animate-slide-right">Spreading God's Message of Love Through Song and Christ-Centered Literature</p>
             <button class="cta-button animate-pulse" onclick="subscribe()" aria-label="Subscribe to YouTube channel">Subscribe on YouTube</button>
         </div>
     </header>
@@ -1075,6 +1075,7 @@ translations.forEach(item => {
 </body>
 
 </html>
+
 
 
 
