--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worshipper Media</title>
+    <title>Worshiper Media</title>
     <link rel="icon" type="image/png" href="worship medialogo.jpg">
     <meta name="description" content="Spreading God's love through translated songs in multiple languages. Subscribe to our YouTube channel for evangelism music.">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">
@@ -793,7 +793,7 @@
 
     <!-- About Section -->
     <section id="about">
-        <h2 class="animate-fade">About Our Channel</h2>
+        <h2 class="animate-fade">About Worshiper Media</h2>
         <div class="about-content">
             <div class="about-text animate-slide-left">
                 <p>Our mission is to share the uplifting song 'Fill Us with Your Love' in 60+ languages, spreading God's message of love, unity, and hope across the globe.
@@ -823,7 +823,7 @@
 
     <!-- Featured Content Section -->
     <section id="featured">
-        <h2 class="animate-fade">Featured Translations</h2>
+        <h2 class="animate-fade">Featured Playlists</h2>
         <div class="video-grid"></div>
     </section>
 
@@ -1075,6 +1075,7 @@ translations.forEach(item => {
 </body>
 
 </html>
+
 
 
 
