mission place chnaged

--- a/index.html
+++ b/index.html
@@ -796,10 +796,17 @@
         <h2 class="animate-fade">About Worshiper Media</h2>
         <div class="about-content">
             <div class="about-text animate-slide-left">
-                <p>Our mission is to share the uplifting song 'Fill Us with Your Love' in 60+ languages, spreading God's message of love, unity, and hope across the globe.
+                <p>Our mission is to share uplifting Christ-Centered / Bible-based literature, teaching materials and songs in up to 60+ languages.
+                <p>We endeavor to spread God's message of love, unity, and hope to people around the world in a language that is closer to their Heart-Language or Mother-Tongue..</p>
+                <p>
+                  You are welcome to screen the videos freely in churches, ministries, and non-commercial projects etc directly from our channels: 
+                  <a href="https://worshipper.info" target="_blank" rel="noopener noreferrer">WORSHIPPER.info</a> | 
+                  <a href="https://visualbible.info" target="_blank" rel="noopener noreferrer">VISUALBIBLE.info</a> | 
+                  <a href="https://worship.biz" target="_blank" rel="noopener noreferrer">WORSHIP.biz</a> | 
+                  <a href="https://hdccm.com" target="_blank" rel="noopener noreferrer">HDCCM.com</a> | 
+                  <a href="https://fuwyl.com" target="_blank" rel="noopener noreferrer">FUWYL.com</a>.
                 </p>
-                <p>Founded by a passionate community of translators and musicians, we translate and produce music that resonates with diverse cultures, fostering spiritual connection through song.</p>
-                <p>Join us in this exciting journey to touch hearts and inspire faith worldwide.</p>
+
                 <div class="impact-stats">
                     <div class="impact-stat animate-zoom">
                         <strong>60+</strong>
@@ -1075,6 +1082,7 @@ translations.forEach(item => {
 </body>
 
 </html>
+
 
 
 
