--- a/blog.html
+++ b/blog.html
@@ -170,9 +170,8 @@ html, body {
     <!-- Share Buttons -->
     <div class="share">
         <button onclick="copyLink()" title="Copy Blog Link"><i class="fas fa-share-alt"></i></button>
-        <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-        <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://facebook.com/VisualBible" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.youtube.com/@worshippermedia" title="Facebook"><i class="fab fa-youtube"></i></a>
     </div>
 
 </div>
