--- a/blog.html
+++ b/blog.html
@@ -155,7 +155,10 @@ html, body {
 
     <!-- Author -->
     <div class="author">
-        <img src="worship medialogo.jpg" alt="Author Photo">
+        <a href="index.html" target="_blank">
+          <img src="worship medialogo.jpg" alt="Author Photo">    
+        </a>
+
         <div class="author-info">
             <p>Written by <strong>Jeremy</strong></p>
             <span>October 31, 2025</span>
