--- a/blog.html
+++ b/blog.html
@@ -141,7 +141,7 @@ html, body {
     <!-- Header -->
     <div class="header">
         <h1>Who is Jesus?</h1>
-        <p>A timeless question. Explore the life, teachings, and meaning of Jesus Christ.</p>
+        <p>A timeless question. Explore the life, teachings, and meaning of Jesus Christ</p>
     </div>
 
     <!-- Post -->
