--- a/blog2.html
+++ b/blog2.html
@@ -7,7 +7,7 @@
 <title id="pageTitle">Blog</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link rel="stylesheet" href="allblogs/style.css">
+<link rel="stylesheet" href="all-blogs-style.css">
 </head>
 <body>
 
