--- a/blogs/example-blog.html
+++ b/blogs/example-blog.html
@@ -69,7 +69,7 @@ const blogData = {
   author: {
     name: "Written by Jeremy",
     date: "October 31, 2025",
-    image: "worship medialogo.jpg"
+    image: "../worship medialogo.jpg"
   },
   links: {
     donate: "https://www.paypal.com/paypalme/worshippermedia",
