--- a/blogs/example-blog.html
+++ b/blogs/example-blog.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="worship medialogo.jpg">
 <title id="pageTitle">Blog</title>
-
+<link rel="icon" type="image/png" href="../worship medialogo.jpg">
 <!-- Fonts & Icons -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -124,3 +124,4 @@ function copyLink() {
 </script>
 </body>
 </html>
+
