--- a/blogs/example2.html
+++ b/blogs/example2.html
@@ -58,7 +58,7 @@
 const blogData = {
   pageTitle: "how to make foods",
   title: "in thos blog i will show you",
-  subtitle: "",
+  subtitle: " ",
   sections: [
     "Jesus of Nazareth, also known as Jesus Christ, is the central figure of Christianity. Born over 2000 years ago, his teachings, life, and crucifixion have profoundly shaped human history.",
     "Christians believe Jesus is the Son of God and the awaited Messiah prophesied in the Old Testament. His teachings emphasized love, compassion, forgiveness, and the importance of faith.",
@@ -73,7 +73,7 @@ const blogData = {
   links: {
     donate: "https://www.paypal.com/paypalme/worshippermedia",
     facebook: "https://facebook.com/VisualBible",
-    youtube: "https://www.youtube.com/@worshippermedia"
+    youtube: "https://www.youtube.com/@worshippermedia",
     twitwer: "https://www.youtube.com/@worshippermedia"
   }
 };
