--- a/blogs/example3.html
+++ b/blogs/example3.html
@@ -58,7 +58,7 @@
 const blogData = {
   pageTitle: "who is God",
   title: "How To Love God",
-  subtitle: " ",
+  subtitle: "k",
   sections: [
     "example"
     "Jesus of Nazareth, also known as Jesus Christ, is the central figure of Christianity. Born over 2000 years ago, his teachings, life, and crucifixion have profoundly shaped human history.",
