--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
                 </div>
             </div>
             <div class="about-video animate-slide-right">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/eYJmT-b-MYY?si=EzaS611mSf2PlsLt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/0M_9DdkrWFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -832,6 +832,19 @@
     <section id="featured">
         <h2 class="animate-fade">Featured Playlists</h2>
         <div class="video-grid"></div>
+    </section>
+
+    <section id="fuwyl">
+        <h2 class="animate-fade">Featured Playlists</h2>
+        <div class="video-grid">
+            <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 1: Gabrielle Version')" onkeypress="if(event.key === 'Enter') showModal('Project 1: Gabrielle Version')">
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmRAJCHuGJ5n1G-5k5qJ2cI-&autoplay=0&enablejsapi=1" title="Project 1: Gabrielle Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="video-caption">Project 1: Gabrielle</div>
+            </div>
+            <div class="video-item animate-zoom" role="button" tabindex="0" onclick="showModal('Project 2: A World In Pain Version')" onkeypress="if(event.key === 'Enter') showModal('Project 2: A World In Pain Version')">
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PLZ-Bkhyr_AmRZ_4edcdieHKNdmNu4NQ3J&autoplay=0&enablejsapi=1" title="Project 2: A World In Pain Playlist" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="video-caption">Project 2: A World In Pain</div>
+        </div>
     </section>
 
     <!-- Community Section -->
@@ -1082,7 +1095,6 @@ translations.forEach(item => {
 </body>
 
 </html>
-
 
 
 
